infra/k8s/code-recipes-client-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: code-recipes-client-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: code-recipes-client
  template:
    metadata:
      labels:
        app: code-recipes-client
    spec:
      containers:
        - name: code-recipes-client
          image: itayschmidt/code-recipes-client
---
# clusterIp service- set up an easy-to-remember url to access the pod. only exposes to pods in the cluster
apiVersion: v1
kind: Service
metadata: 
  name: code-recipes-client-service
spec:
  selector:
    app: code-recipes-client
  type: ClusterIP 
  ports:
    - name: code-recipes-client
      protocol: TCP
      port: 3000
      targetPort: 3000
