infra/k8s/foozool-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: foozool-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: foozool
  template:
    metadata:
      labels:
        app: foozool
    spec:
      containers:
        - name: foozool
          image: itayschmidt/foozool
---
# clusterIp service- set up an easy-to-remember url to access the pod. only exposes to pods in the cluster
apiVersion: v1
kind: Service
metadata: 
  name: foozool-service
spec:
  selector:
    app: foozool
  type: ClusterIP 
  ports:
    - name: foozool
      protocol: TCP
      port: 4000
      targetPort: 4000
