infra/k8s/foozool-mongo-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: foozool-mongo-deployment
spec: 
  replicas: 1
  selector:
    matchLabels:
      app: foozool-mongo
  template:
    metadata:
      labels:
          app: foozool-mongo
    spec:
      containers:
        - name: foozool-mongo
          image: mongo
---
apiVersion: v1
kind: Service
metadata:
  name: foozool-mongo-service
spec:
  selector:
    app: foozool-mongo
  type: ClusterIP 
  ports:
    - name: db
      protocol: TCP
      port: 27017
      targetPort: 27017
