infra/k8s/foozool-service.yaml
# BodePort makes a pod accessible outside the cluster, for development purposes
apiVersion: v1
kind: Service
metadata: 
  name: foozool-nodeport-service
spec:
  type: NodePort
  selector:
    app: foozool
  ports:
    - name: foozool
      protocol: TCP
      port: 4000
      targetPort: 4000
