infra/k8s/ingress-service.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2 # remove the /api/
  name: rewrite
  namespace: default
spec:
  rules:
  - host: foozool.dev # add this in /etc/hosts
    http:
      paths:
        - path: /api/
          pathType: Prefix
          backend:
            service:
              name: foozool-service
              port:
                number: 4000
        # - path: /?(.*)
        #   pathType: Prefix
        #   backend:
        #     service: 
        #       name: foozool-client-service
        #       port:
        #         number: 3000
  ingressClassName: nginx
---
apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  name: nginx
spec:
  controller: k8s.io/ingress-nginx
